# ChangeLog for dev-java/dbunit
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/dbunit/ChangeLog,v 1.9 2005/05/04 20:35:20 luckyduck Exp $

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org> dbunit-2.1.ebuild:
  stable on amd64, ppc and x86. introduced support for the source useflag

  15 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org> dbunit-2.1.ebuild:
  added ~ppc to KEYWORDS

*dbunit-2.1 (05 Jan 2005)

  05 Jan 2005; Jan Brinkmann <luckyduck@gentoo.org> +metadata.xml,
  +files/build.xml, +dbunit-2.1.ebuild:
  Initial import. Builds dbunit from source and removes packed jars. Fixes
  #63290.
