@@ -1,15 +1,38 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 5ecf66e3f63c783e7ffa83bcd9f9c484 dbunit-2.1.ebuild 1344
-MD5 8ed749ba9e3ac9b10f7d51b9c5d4ffb6 ChangeLog 669
-MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
+AUX build.xml 1446 RMD160 92b86bc6ad09d450b9e49bebc8f9e37c2461db56 SHA1 fc1e764f2da34feb4a2d5a35231f07603206b0b5 SHA256 6a82e56811feb099fc8882b28cfeaa9dfb6fda31a14f3a0495fdca2838a02eb6
 MD5 6160efdb57247553b137a32dfd1464aa files/build.xml 1446
-MD5 658983e5786cc25ddc975f786d424af0 files/digest-dbunit-2.1 66
+RMD160 92b86bc6ad09d450b9e49bebc8f9e37c2461db56 files/build.xml 1446
+SHA256 6a82e56811feb099fc8882b28cfeaa9dfb6fda31a14f3a0495fdca2838a02eb6 files/build.xml 1446
+DIST dbunit-2.1-src.tar.gz 192326 RMD160 159a976d2b832d7bde2458ae793284fe40229af6 SHA1 a1adfa5744faad93cca4d1982510ed965e8e9292 SHA256 34cd89a08b41228278579cb9df38e2343265f405b5303449b4a047ee9e083635
+DIST dbunit-2.2-src.tar.gz 577489 RMD160 f6fa289ca4e008561d8dcaa11f4707ba7a7cb4ec SHA1 eb309d730958a935a3b2ae4cab02b280156f01c4 SHA256 669eb5738930c0b6ab2c4e502f8441e663b1b6825e4ebc1df64994a523f3de47
+EBUILD dbunit-2.1.ebuild 1344 RMD160 2edefebdcf2b3d702ed1d799930759af7b2e6590 SHA1 bfba3da767135c37299f1b415a99fed96a1e451c SHA256 3fccf976fdabded7e1bcb15be78956f7e0ef0bfb99d8dea523d2ccd8ac40599c
+MD5 5ecf66e3f63c783e7ffa83bcd9f9c484 dbunit-2.1.ebuild 1344
+RMD160 2edefebdcf2b3d702ed1d799930759af7b2e6590 dbunit-2.1.ebuild 1344
+SHA256 3fccf976fdabded7e1bcb15be78956f7e0ef0bfb99d8dea523d2ccd8ac40599c dbunit-2.1.ebuild 1344
+EBUILD dbunit-2.2.ebuild 1269 RMD160 1c3a17e092c24ead027891ebbd012f63d6c9e9ec SHA1 68121c7dba14a2f52323b78d0ddc5f48155bde2c SHA256 8b2a0570da04abe0430a1d121bf42eb9b2c02e9dd4840145455954d0b2af7592
+MD5 5ba1596f7579d378632f68f75b8d707d dbunit-2.2.ebuild 1269
+RMD160 1c3a17e092c24ead027891ebbd012f63d6c9e9ec dbunit-2.2.ebuild 1269
+SHA256 8b2a0570da04abe0430a1d121bf42eb9b2c02e9dd4840145455954d0b2af7592 dbunit-2.2.ebuild 1269
+MISC ChangeLog 834 RMD160 27105c39545c5de3fda189ab4ea385bfdb772378 SHA1 06419b249be42e0e93be8191f7ec5fd8f988ba62 SHA256 65e0f760e1173b7f9c87b442c170e00a37a691289ba480ab2a39fb7565c38717
+MD5 bffcda583d1c4b033dad06e3361e7c94 ChangeLog 834
+RMD160 27105c39545c5de3fda189ab4ea385bfdb772378 ChangeLog 834
+SHA256 65e0f760e1173b7f9c87b442c170e00a37a691289ba480ab2a39fb7565c38717 ChangeLog 834
+MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
+MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
+RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 metadata.xml 157
+SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9 metadata.xml 157
+MD5 301ab02f7ef978c8aea665d9b29a1ae3 files/digest-dbunit-2.1 244
+RMD160 627b8732c0a9e8fa087586a329555fbbb41c30e4 files/digest-dbunit-2.1 244
+SHA256 0796aa7ac6abb89d6105747cea0c1879646cedd7aea6bff26a334e8dbb84c185 files/digest-dbunit-2.1 244
+MD5 94f32a6971c7078bc4fb15cbdf471939 files/digest-dbunit-2.2 244
+RMD160 2479687f794342d297b48c896c0107295b97b75b files/digest-dbunit-2.2 244
+SHA256 7ab0d960d9402e4c85a7a27e5c16158bd99ef3561d2e9f6dba1af9c4767eab99 files/digest-dbunit-2.2 244
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.1 (GNU/Linux)
+Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFC2Rfu/rLF9B432nYRAi7bAJ9iQyY6R5SMP9jHJ3X/wtq0Zx0yMgCgp4ge
-aSC1QBNOICr6yLolFT0X5Tk=
-=tLTT
+iD8DBQFFp20lcxLzpIGCsLQRAr9dAJ9sPmWATZ//DmVypWqKYTBJnAn9rwCcCO/G
+NHozZROK1jI8Xav0kxIVZKg=
+=SML0
 -----END PGP SIGNATURE-----
