@@ -1,1 +1,3 @@
 MD5 9726d6508fdb3e576047d47791c5efec dbunit-2.1-src.tar.gz 192326
+RMD160 159a976d2b832d7bde2458ae793284fe40229af6 dbunit-2.1-src.tar.gz 192326
+SHA256 34cd89a08b41228278579cb9df38e2343265f405b5303449b4a047ee9e083635 dbunit-2.1-src.tar.gz 192326
