@@ -1,0 +1,3 @@
+MD5 eeccb2db29567243f56e62a511848c9b dbunit-2.2-src.tar.gz 577489
+RMD160 f6fa289ca4e008561d8dcaa11f4707ba7a7cb4ec dbunit-2.2-src.tar.gz 577489
+SHA256 669eb5738930c0b6ab2c4e502f8441e663b1b6825e4ebc1df64994a523f3de47 dbunit-2.2-src.tar.gz 577489
